--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: "Violah"
 url: "https://d6rks1lv3rz3r0.github.io/"
 
 # Secondary Parameters
-baseurl: "/SilverZero-Starbase-Shop"
+baseurl: "/Starbase"
 headercolor: "#FF0000"
 # Tertiary Parameters
 #g-analytics:
